nuevos avances realizados, estamos cerca de poder poner el modal de las firmas

--- a/server/etherpad-lite/admin/index.html
+++ b/server/etherpad-lite/admin/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="root"></div>
     <div id="loading"></div>
+    <!--<a href="../src/templates/pad.html">Ir a la página de la modal de la firma</a>  --> <!-- Enlace a tu archivo HTML secundario -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
